Fixed profilepicture size on mobile phones

--- a/src/style.css
+++ b/src/style.css
@@ -204,4 +204,8 @@ h2 {
         padding: 20px 0px;
         margin: 100px 0px;
     }
+    .profilepicture {
+        max-height: 100%;
+        max-width: 80%;
+    }
 }
